k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-assignment
  namespace: assignment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-assignment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend-assignment
    spec:
      containers:
        - name: frontend-assignment
          image: asia-southeast1-docker.pkg.dev/agentassistant-496719/assignment/frontend-assignment:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
            - name: grpc
              containerPort: 50051
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
