k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-assignment
  namespace: assignment
spec:
  selector:
    app: frontend-assignment
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: grpc
      port: 50051
      targetPort: 50051
